<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="description">Description</string>
    <string name="Add" />
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_plan">Add Plan</string>
    <string name="update_plan">Update Plan</string>
</resources>